# narrative_engine

./: README.md
api/: .gitignore  LANGCHAIN_SETUP.md  README_LLM_SETUP.md  TROUBLESHOOTING.md  env_example.txt  pyproject.toml  setup_env.py  test_mistral.py  test_validation.py
api/output/: .gitignore  quest_ДЕТЕКТИВ_частный детектив_20250804_230109.json  quest_киберпанк_хакер-одиночка_20250804_225632.json  quest_фэнтези_эльф-лучник_20250804_232055.json
api/src/quest_app/: fields.py  langchain_generator.py  llm_generator.py  models.py  serializers.py  urls.py  views.py
api/src/quest_app/migrations/: 0001_initial.py  0002_alter_quest_quest_data.py
api/src/quest_project/: asgi.py  settings.py  urls.py  wsgi.py
api/tests/: zadanie1.txt  zadanie2.txt  zadanie3.txt
client/: index.html  package-lock.json  package.json
client/src/: App.vue
client/src/components/: QuestGenerator.vue  QuestGraph.vue  QuestHistory.vue  QuestTree.vue
